...
      }
    },
    "保存": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "编辑": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "编辑清单": {
      "extractionState": "manual",
      "localizations": {
...
          "stringUnit": {
            "state": "translated",
            "value": "Edit List Item"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "個人資料"
          }
        }
...
      }
    },
    "还没有共同清单": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "还没有纪念日": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "纪念日名称": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "结束时间": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "每天都是独一无二纪念日，庆祝一下吧 🎉": {
      "extractionState": "manual",
      "localizations": {
...
          "stringUnit": {
            "state": "translated",
            "value": "Preferences"
          }
        },
...
      }
    },
    "清单": {
      "extractionState": "manual",
      "localizations": {
...
          "stringUnit": {
            "state": "translated",
            "value": "List"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "清單"
          }
        }
...
      }
    },
    "取消": {
      "extractionState": "manual",
      "localizations": {
...
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        },
...
      }
    },
    "日历": {
      "extractionState": "manual",
      "localizations": {
...
          "stringUnit": {
            "state": "translated",
            "value": "Calendar"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "日曆"
          }
        }
...
      }
    },
    "删除": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "设置": {
      "extractionState": "manual",
      "localizations": {
...
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
        }
...
      }
    },
    "新纪念日": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "新清单": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "新日程": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "一起吃晚饭": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "一起去灵隐寺还愿吧": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "退出并返回": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "在一起": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "这天还没有安排": {
      "extractionState": "manual",
      "localizations": {
...
